--- a/public/index.html
+++ b/public/index.html
@@ -3,43 +3,8 @@
   <meta charset="UTF-8">
   <title>p5.js template</title>
 
-  <link rel="stylesheet" href="./assets/css/styles.css">
   <script async src="./assets/js/app.js"></script>
-
-  <script type="text/javascript" charset="utf-8">
-    const width = window.innerWidth
-    const height = window.innerHeight
-    const r = 200
-    let t = 0
-    const n = 10
-
-    function setup() {
-      const canvas = createCanvas(width, height)
-      canvas.parent(this.element)
-    }
-
-    function draw() {
-      background(255)
-
-      translate(width / 2, height / 2)
-      stroke(0)
-      noFill()
-
-      for (let i = 0; i < n; i++) {
-        beginShape()
-        for (let a = -PI; a < PI; a += 0.01) {
-          const x = cos(a + t * i)
-          const y = sin(a)
-
-          vertex(x * r, y * r)
-        }
-        endShape()
-      }
-
-
-      t += 0.001
-    }
-  </script>
+  <script async src="sketch.js"></script>
 
 </head>
 <body>
