--- a/public/test.html
+++ b/public/test.html
@@ -8,44 +8,25 @@
 
 
   <script type="text/javascript" charset="utf-8">
-    const width = window.innerWidth
-    const height = window.innerHeight
-    const r = 300
-    let t = 1.90
-    const n = 2
-
-    function setup() {
-      const canvas = createCanvas(width, height)
-      canvas.parent(this.element)
-
-      stroke(0)
-      strokeWeight(3)
-      noFill()
-    }
-
-    function draw() {
-      background(255)
-
-      translate(width / 2, height / 2)
-
-      for (let i = 1; i < n; i++) {
-        beginShape()
-        for (let a = -PI; a < PI; a += 0.10 / r) {
-          const x = cos(a) + 0.5 * cos(a*5)
-          const y = sin(a) + 0.5 * sin(a*-5)
-          const d = sin(a * 3.0 + t) * 3
-          const dx = exp(-sq(d)) * cos(TAU * 100 * a + (t*2)) * 70
-          const dy = exp(-sq(d)) * sin(TAU * 100 * a + (t*2)) * 70
-
-          // point(x * r, y * r);
-          // stroke(255 * a / TAU, 100, 100)
-          vertex(x * r - dx, y * r - dy)
+    t = 0//#つぶやきProcessing
+    draw = _ => {
+      t || createCanvas(W = 600, W)
+      background(w = W / 2)
+      strokeWeight(5)
+      r = 10
+      s = 50
+      n = noise
+      t += .0150
+      for (y = W - r; y -= r;) for (x = W - r; x -= r;) {
+        f = 0
+        for (i = 3; i--;) {
+          p = t + TAU / 3 * i
+          q = sin(t) * s + s
+          f ^= dist(x, y, w/2, w/2) < w / 2
         }
-        endShape()
+        // stroke(f * s)
+        line( f?x: x+r, y + r, f ?x + r:x  , y)
       }
-
-      t += 0.005
-      // noLoop();
     }
   </script>
 
