--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <title>p5.js template</title>
 
   <script async src="./assets/js/app.js"></script>
-  <script async src="sketch.js"></script>
+  <script async src="marchingSquares.js"></script>
 
 </head>
 <body>
