--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,13 @@
   <meta charset="UTF-8">
   <title>p5.js template</title>
 
-  <script async src="./assets/js/app.js"></script>
-  <script async src="marchingSquares.js"></script>
+  <script src="./assets/js/app.js"></script>
+  <script src="lib.js"></script>
+  <script src="Point.js"></script>
+  <script src="OpenSimplexNoise.js"></script>
+  <script src="Circle.js"></script>
+  <script src="Point.js"></script>
+  <script src="marchingSquares.js"></script>
 
 </head>
 <body>
