--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,16 @@
   <meta charset="UTF-8">
   <title>p5.js template</title>
 
-  <script src="./assets/js/app.js"></script>
-  <script src="lib.js"></script>
-  <script src="Point.js"></script>
-  <script src="OpenSimplexNoise.js"></script>
-  <script src="Circle.js"></script>
-  <script src="Point.js"></script>
-  <script src="marchingSquares.js"></script>
+  <style type="text/css">
+    body {
+      padding: 0;
+      margin: 0;
+    }
+  </style>
+
+  <script src="assets/js/app.js"></script>
 
 </head>
 <body>
-
 </body>
 </html>
